--- a/pages/about.html
+++ b/pages/about.html
@@ -55,13 +55,89 @@
               <tr>
                 <td></td>
                 <td>
+                  <h4>Vice President - UX Designer</h4>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <p>JPMorgan & Chase</p>
+                  <p class="date">May 2022 - Present</p>
+                </td>
+                <td>
+                  <ul>
+                    <li>
+                      Lead UX projects by shapping the end-to-end design to
+                      ensure a user centric approach for multiple investment and
+                      investment reporting applications
+                    </li>
+                    <li>
+                      Work closely with product owners to uncover user needs,
+                      contexts and validating how complex investment data, data
+                      lineage and investment information hierarchy is translated
+                      to the UX
+                    </li>
+                    <li>
+                      Ensuring the consistency of user journeys within the same
+                      platform by using a modular approach
+                    </li>
+                    <li>
+                      Apply user centric principes to make data easier to
+                      consume
+                    </li>
+                    <li>
+                      Creating, presenting and documenting proposed solutions
+                    </li>
+                    <li>
+                      Mentoring junior designers through feedback, guiding their
+                      day-to-day work and helping them prepare for delivering it
+                    </li>
+                  </ul>
+                </td>
+              </tr>
+              <tr>
+                <td></td>
+                <td>
+                  <h4>UX Manager</h4>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <p>HSBC</p>
+                  <p class="date">Aug 2021 - May 2022</p>
+                </td>
+                <td>
+                  <ul>
+                    <li>
+                      Develop and maintain detailed design patterns that scale
+                      for the team and influence other designers
+                    </li>
+                    <li>
+                      Create information architecture, wireframes, user flows,
+                      high-fidelity mocks, and prototypes for new applications
+                      and experiences
+                    </li>
+                    <li>
+                      Explain and justify design solutions and decisions to
+                      multidisciplinary teams
+                    </li>
+                    <li>Direct reports management</li>
+                    <li>
+                      Manage UX accross the retail channel to make sure it is
+                      consistent.
+                    </li>
+                  </ul>
+                </td>
+              </tr>
+              <tr>
+                <td></td>
+                <td>
                   <h4>Senior Digital Designer</h4>
                 </td>
               </tr>
               <tr>
                 <td>
                   <p>Charles Stanley</p>
-                  <p class="date">2017 - Present</p>
+                  <p class="date">2017 - 2021</p>
                 </td>
                 <td>
                   <ul>
@@ -130,6 +206,44 @@
           </div>
           <section class="tableInfo">
             <table>
+              <tr>
+                <td></td>
+                <td>
+                  <h4>Masters in Business Administration (MBA)</h4>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <p>University of London</p>
+                  <p class="date">2022-2024</p>
+                </td>
+                <td>
+                  <p>
+                    This MBA has the purpose to help me better understand the
+                    challanges facing today's global business leaders. The
+                    exposure to different business practices has been helping me
+                    to grasp how different decisions can influence share price,
+                    market volatility and how these decisions are evaluated in
+                    terms of returns and performance.
+                  </p>
+                  <ul>
+                    <li>Successful leadership;</li>
+                    <li>
+                      Organisational behaviour and human resources management
+                    </li>
+                    <li>Strategic Management;</li>
+                    <li>Marketing for Managers;</li>
+                    <li>Portfolio Management;</li>
+                    <li>Accounting and Finance;</li>
+                    <li>Portfolio Management;</li>
+                    <li>International Corporate Finance for Managers;</li>
+                    <li>Economic for Managers;</li>
+                    <li>International financial markets and institutions;</li>
+                    <li>Risk Management and Decision Making;</li>
+                    <li>Negotiation and conflict management;</li>
+                  </ul>
+                </td>
+              </tr>
               <tr>
                 <td></td>
                 <td>
