--- a/pages/about.html
+++ b/pages/about.html
@@ -335,7 +335,7 @@
           If you want to know more about me, please download my complete CV
         </h4>
         <div class="btn">
-          <a href="../files/CVSaraBretes2020.pdf">download full CV</a>
+          <a href="../files/CVSaraBretes -  2022.pdf">download full CV</a>
         </div>
       </section>
       <section id="tools">
