--- a/pages/about.html
+++ b/pages/about.html
@@ -336,6 +336,7 @@
         </h4>
         <div class="btn">
           <a href="../files/CVSaraBretes2022.pdf">download full CV</a>
+          <a href="../files/CVSaraBretes2022.pdf">download full CV</a>
         </div>
       </section>
       <section id="tools">
